fix bug button small device

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -270,6 +270,24 @@ h1 {
   }
 }
 
+@media (max-width: 420px) {
+
+  .home-button {
+    font-size: 1.2rem;
+    font-weight: 800;
+    padding: 30px 30px;
+  }
+}
+
+@media (max-width: 310px) {
+
+  .home-button {
+    font-size: 1rem;
+    font-weight: 800;
+    padding: 20px;
+  }
+}
+
 /* .hacktober-logo {
   padding-top: 30px;
 } */
